app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: #fff;
  font-family: 'Poppins', sans-serif;
  padding-top: 140px;
}

@keyframes fade-in-up {
  from {
    opacity: 0;
    transform: translateY(30px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.animate-fade-in-up {
  animation: fade-in-up 0.8s ease-out forwards;
}

.animation-delay-200 {
  animation-delay: 0.2s;
  opacity: 0;
}

.animation-delay-400 {
  animation-delay: 0.4s;
  opacity: 0;
}

.animation-delay-600 {
  animation-delay: 0.6s;
  opacity: 0;
}

.breadcrumbs-section {
  padding: 60px 10px;
}

.custom-font-style h1,
.custom-font-style h2,
.custom-font-style h3,
.custom-font-style h4,
.custom-font-style h5,
.custom-font-style h6 {
  font-size: 25px;
  color: #212088;
  margin-top: 1rem;
}

custom-font-style p {
  margin-top: 1rem;
  text-align: justify !important;
  hyphens: auto !important;
}

.custom-font-style ul {
  list-style: disc;
  padding: revert;
  margin: revert;
}

.custom-font-style table,
.custom-font-style table tr,
.custom-font-style table td {
  border: 1px solid;
  padding: 5px;
}

.custom-font-style table {
  margin-top: 1rem;
}

.custom-font-style p {
  margin-bottom: 1.5rem;
  font-size: 16px;
  color: #3C3C3C;
  font-weight: 400;
  line-height: 1.8rem;
}

.custom-heading-color-blue span {
  color: #212088;
}

.custom-heading-color-light span {
  color: #38A0A7;
}

.place-a-query .custom-grid-cols {
  grid-template-columns: 1fr !important;
  gap: 4px;
}

.place-a-query form textarea {
  height: 90px;
}

.place-a-query form {
  gap: 10px !important;
}

.place-a-query form input,
.place-a-query form textarea,
.place-a-query form button {
  padding: 10px !important;
}

.main-slider {
  aspect-ratio: 16/7;
  width: 100% !important;
  height: auto !important;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scroll::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hide-scroll {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}

.product-description ul{
  margin-left: 15px;
}

.bg-orange-500 {
  background-color: #ef7f1b !important;
}

.text-\[\#EF7F1B\]{
  color: #ef7f1b !important
}

@media (max-width: 600px) {
  .breadcrumbs-section {
    padding: 40px 10px;
  }

  .main-slider {
    aspect-ratio: 16/7;
  }
}

@media (max-width: 480px) {
  .main-logo {
    width: 125px;
  }

  body {
    padding-top: 135px;
  }
}

@media (min-width: 481px) and (max-width: 1024px){
 .main-logo {
    width: 155px;
  }
}

@media (min-width: 1025px) and (max-width: 1200px){
 .main-logo {
    width: 200px;
  }
}


@media (min-width: 768px) {
  .custom-font-style p {
    font-size: 16px;
  }
}

@media (min-width: 1024px) {
  .custom-font-style {
    margin-bottom: 3rem;
  }
}

@media (min-width: 576px) {
  .container {
    max-width: 540px !important;
  }
}

/* Medium devices (≥768px) */
@media (min-width: 768px) {
  .container {
    max-width: 720px !important;
  }
}

/* Large devices (≥992px) */
@media (min-width: 992px) {
  .container {
    max-width: 960px !important;
  }
}

/* Extra large devices (≥1200px) */
@media (min-width: 1200px) {
  .container {
    max-width: 1140px !important;
  }
}

/* Extra extra large (≥1400px, Bootstrap 5 style) */
@media (min-width: 1400px) {
  .container {
    max-width: 1400px !important;
  }
}

